--- a/quote.css
+++ b/quote.css
@@ -1,20 +1,15 @@
-html, body {
-    background-color:#E9C893;
-}
-
 .container {
   height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color:#E9C893;
 }
 .quotediv {
   border-radius:10px;
   margin-top:50px;
   margin-bottom:50px;
-  width: 50%;
-  height: 350px;;
+  width: 600px;
+  height: 350px;
   background-color:white;
 }
