--- a/quote.css
+++ b/quote.css
@@ -1,8 +1,19 @@
 .btn {
-  margin-right:50px;
+  margin-right:3.5em;
   margin-top:260px;
   float:right;
   outline: none;
+  border:0px; 
+}
+
+i{
+   font-size:5.0em;
+   margin-left: 1.0em;
+   margin-top: 250px;
+}
+
+.btn:hover {
+  opacity: 0.9;
 }
 
 .container {
@@ -14,8 +25,8 @@
 }
 
 .quotediv {
-  border-radius:10px;
-  margin-top:50px;
+  border-radius:5px;
+  margin-top:100px;
   margin-bottom:50px;
   width: 600px;
   height: 350px;
