--- a/quote.css
+++ b/quote.css
@@ -1,15 +1,15 @@
 .btn {
-  margin-right:3.5em;
-  margin-top:260px;
+  font-size:1.0em;
+  margin-right:3.8em;
   float:right;
   outline: none;
   border:0px; 
 }
 
-i{
-   font-size:5.0em;
+i {
+   font-size:4.8em;
    margin-left: 1.0em;
-   margin-top: 250px;
+   margin-top:-10px;
 }
 
 i:hover {
@@ -32,8 +32,17 @@ i:hover {
 .quotediv {
   border-radius:5px;
   margin-top:100px;
-  margin-bottom:50px;
-  width: 600px;
-  height: 350px;
+  margin-bottom:100px;
+  width: 45em;
+  height: 25em;
   background-color:white;
+}
+
+blockquote {
+  margin-top:40px;
+  font-size:2em;
+}
+
+blockquote footer {
+  text-align: right;
 }
