imported a google font. Added a footer for a link to my codepen. Created a footer class.

--- a/quote.css
+++ b/quote.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Gloria+Hallelujah');
+
+* {
+  font-family: 'Gloria Hallelujah';
+}
+
 .btn {
   font-size:1.0em;
   margin-right:3.8em;
@@ -46,4 +52,21 @@ blockquote {
 
 blockquote footer {
   text-align: right;
+}
+
+.footer {
+  width:450px;
+  text-align:center;
+  margin:-80px auto 0px auto;
+  font-size:1.0em;
+  color:white;
+}
+
+.footer a {
+  color:white;
+}
+
+.footer a:hover{
+  color:black;
+  text-decoration:none;
 }
