--- a/quote.css
+++ b/quote.css
@@ -6,6 +6,7 @@
 
 .btn {
   font-size:1.0em;
+  margin-top:1em;
   margin-right:3.8em;
   float:right;
   outline: none;
@@ -14,8 +15,8 @@
 
 i {
    font-size:4.7em;
-   margin-left: 1.0em;
-   margin-top:-10px;
+   margin-left: 60px;
+   margin-top:3px;
    margin-bottom:20px;
 }
 
@@ -38,8 +39,8 @@ i:hover {
 
 .quotediv {
   border-radius:5px;
-  margin-top:100px;
-  margin-bottom:100px;
+  margin-top:60px;
+  margin-bottom:60px;
   width: 45em;
   min-height: 15em;
   background-color:white;
@@ -59,7 +60,7 @@ blockquote footer {
 .footer {
   width:450px;
   text-align:center;
-  margin:-80px auto 0px auto;
+  margin:-40px auto 0px auto;
   font-size:1.0em;
   color:white;
 }
@@ -71,4 +72,4 @@ blockquote footer {
 .footer a:hover{
   color:black;
   text-decoration:none;
-}git 
+}
